# excel-mapper

./: LICENSE  README.md  pyproject.toml  requirements.txt
excel_mapper/: __init__.py  core.py
